# Playlist-Manager

./: .gitignore  CMakeLists.txt  README.md  compileandrun  main.cpp  playlist.cpp  playlist.h  song.h
src/: audio_resource.h  main.cpp  playlist.h  song.cpp  song.h  song_handle.cpp  song_handle.h
